# mcl-collaborative-blueprint

./: .env.example  .gitignore  .pre-commit-config.yaml  ATOMIC_STEPS.md  CHECKPOINT.md  CODING_AGENT_PROMPT.md  FUTURE_FEATURES.md  README.md  TECH_SPECS.md  app.py  pyproject.toml  repo_details.json  requirements.txt
.streamlit/: config.toml  secrets.toml.example
mcl_blueprint/: __init__.py  ai_mirror.py  config.py  models.py  sheets.py  visualizations.py
mcl_blueprint/components/: __init__.py  attendee.py  dashboard.py  login.py  registration.py  results.py
notebooks/: demo.ipynb
tests/: conftest.py  test_ai_mirror.py  test_config.py  test_integration.py  test_models.py  test_sheets.py  test_visualizations.py
